--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -1,10 +1,10 @@
-cabal-version:      >= 1.6
-build-type:         Simple
 name:               arbtt
 version:            0.1.1
 license:            GPL
 license-file:       LICENSE
-category:           Development
+category:           Desktop
+cabal-version:      >= 1.6
+build-type:         Simple
 author:             Joachim Breitner <mail@joachim-breitner.de>
 maintainer:         Joachim Breitner <mail@joachim-breitner.de>
 copyright:          Joachim Breitner 2009
