Example tags for time-of-day matching

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -28,3 +28,11 @@ current window $title =~ m!(?:~|home/jojo)/projekte/(?:programming/(?:haskell/)?
 -- Out of curiosity: what percentage of my time am I actually coding Haskell?
 current window ($program == "gvim" && $title =~ /^[^ ]+\.hs \(/ )
   ==> tag Editing-Haskell,
+
+-- To be able to match on the time of day, I introduce tags for that as well
+$time >=  2:00 && $time <  8:00 ==> tag time-of-day:night,
+$time >=  8:00 && $time < 12:00 ==> tag time-of-day:morning,
+$time >= 12:00 && $time < 14:00 ==> tag time-of-day:lunchtime,
+$time >= 14:00 && $time < 18:00 ==> tag time-of-day:afternoon,
+$time >= 18:00 && $time < 22:00 ==> tag time-of-day:evening,
+$time >= 22:00 || $time <  2:00 ==> tag time-of-day:late-evening,
