--- a/categorize.cfg
+++ b/categorize.cfg
@@ -36,3 +36,6 @@ $time >= 12:00 && $time < 14:00 ==> tag time-of-day:lunchtime,
 $time >= 14:00 && $time < 18:00 ==> tag time-of-day:afternoon,
 $time >= 18:00 && $time < 22:00 ==> tag time-of-day:evening,
 $time >= 22:00 || $time <  2:00 ==> tag time-of-day:late-evening,
+
+-- This tag always refers to the last 24h
+$sampleage <= 24:00 ==> tag last-day,
