More examples in categorize.cfg

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -24,6 +24,14 @@ any window ($program == "evolution" && $title =~ /^(.*) \([0-9]+/)
 -- project I'm currently working on
 current window $title =~ m!(?:~|home/jojo)/projekte/(?:programming/(?:haskell/)?)?([^/)]*)!
   ==> tag Project:$1,
+current window $title =~ m!(?:~|home/jojo)/debian!
+  ==> tag Project:Debian,
+
+-- My diploma thesis is in a different directory
+current window $title =~ m!(?:~|home/jojo)/dokumente/Uni/DA!
+  ==> tag Project:DA,
+current window $title =~ m!Diplomarbeit.pdf!
+  ==> tag Project:DA,
 
 -- Out of curiosity: what percentage of my time am I actually coding Haskell?
 current window ($program == "gvim" && $title =~ /^[^ ]+\.hs \(/ )
