Include documentation in source tarball

--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -22,7 +22,8 @@ homepage:           http://www.joachim-breitner.de/projects#arbtt
 
 
 extra-source-files:
-    categorize.cfg, arbtt-capture.desktop, README
+    categorize.cfg, arbtt-capture.desktop, README,
+    doc/arbtt.xml, doc/fptools.css, doc/Makefile
 
 executable arbtt-capture
     main-is:            capture-main.hs
