Extend example ./categorize.cfg

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -32,6 +32,8 @@ current window $title =~ m!(?:~|home/jojo)/dokumente/Uni/DA!
   ==> tag Project:DA,
 current window $title =~ m!Diplomarbeit.pdf!
   ==> tag Project:DA,
+current window $title =~ m!LoopSubgroupPaper.pdf!
+  ==> tag Project:DA,
 
 -- Out of curiosity: what percentage of my time am I actually coding Haskell?
 current window ($program == "gvim" && $title =~ /^[^ ]+\.hs \(/ )
