Updated categorize.cfg example (calendar functions and time zones)

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -13,15 +13,16 @@ $idle > 60 ==> tag inactive,
 -- Simple rule that just tags the current program
 tag Program:$current.program,
 
--- I'd like to know what evolution folders I'm working in. But when sending a mail,
--- the window title only contains the (not very helpful) subject. So I do not tag
--- necessarily by the active window title, but the title that contains the folder
+-- I'd like to know what evolution folders I'm working in. But when sending a
+-- mail, the window title only contains the (not very helpful) subject. So I do
+-- not tag necessarily by the active window title, but the title that contains
+-- the folder
 current window $program == "evolution" &&
 any window ($program == "evolution" && $title =~ /^(.*) \([0-9]+/)
   ==> tag Evo-Folder:$1,
 
--- A general rule that works well with gvim and gnome-terminal and tells me what
--- project I'm currently working on
+-- A general rule that works well with gvim and gnome-terminal and tells me
+-- what project I'm currently working on
 current window $title =~ m!(?:~|home/jojo)/projekte/(?:programming/(?:haskell/)?)?([^/)]*)!
   ==> tag Project:$1,
 current window $title =~ m!(?:~|home/jojo)/debian!
@@ -39,7 +40,8 @@ current window $title =~ m!LoopSubgroupPaper.pdf!
 current window ($program == "gvim" && $title =~ /^[^ ]+\.hs \(/ )
   ==> tag Editing-Haskell,
 
--- To be able to match on the time of day, I introduce tags for that as well
+-- To be able to match on the time of day, I introduce tags for that as well.
+-- $time evaluates to local time.
 $time >=  2:00 && $time <  8:00 ==> tag time-of-day:night,
 $time >=  8:00 && $time < 12:00 ==> tag time-of-day:morning,
 $time >= 12:00 && $time < 14:00 ==> tag time-of-day:lunchtime,
@@ -49,3 +51,23 @@ $time >= 22:00 || $time <  2:00 ==> tag time-of-day:late-evening,
 
 -- This tag always refers to the last 24h
 $sampleage <= 24:00 ==> tag last-day,
+
+-- To categorize by calendar periods (months, weeks, or arbitrary periods),
+-- I use $date variable, and some auxiliary functions. All these functions
+-- evaluate dates in local time. Set TZ environment variable if you need
+-- statistics in a different time zone.
+
+-- “format $date” produces a string with the date in ISO 8601 format
+-- (YYYY-MM-DD), it may be compared with strings. For example, to match
+-- everything on and after a particular date I can use
+format $date >= "2010-03-19"  ==> tag period:after_a_special_day,
+
+-- “day of month $date” gives the day of month (1..31),
+-- “day of week $date” gives a sequence number of the day of week
+-- (1..7, Monday is 1):
+(day of month $date == 13) && (day of week $date == 5) ==> tag day:friday_13,
+
+-- “month $date” gives a month number (1..12), “year $date” gives a year:
+month $date == 1 ==> tag month:January,
+month $date == 2 ==> tag month:February,
+year $date == 2010 ==> tag year:2010,
