Adjust my categorize, special-casing output.pdf

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -3,7 +3,8 @@ aliases (
 	"sun-awt-X11-XFramePeer"  -> "java",
 	"sun-awt-X11-XDialogPeer" -> "java",
 	"sun-awt-X11-XWindowPeer" -> "java",
-        "gramps.py"               -> "gramps"
+        "gramps.py"               -> "gramps",
+	"___nforschung"           -> "ahnenforschung"
 	)
 
 -- A rule that probably everybody wants. Being inactive for over a minute
@@ -27,6 +28,12 @@ current window $title =~ m!(?:~|home/jojo)/projekte/(?:programming/(?:haskell/)?
   ==> tag Project:$1,
 current window $title =~ m!(?:~|home/jojo)/debian!
   ==> tag Project:Debian,
+
+-- This was a frequently looked-at pdf-File
+current window $title =~ m!output.pdf! &&
+any window ($title =~ /nforschung/)
+  ==> tag Project:ahnenforschung,
+
 
 -- My diploma thesis is in a different directory
 current window $title =~ m!(?:~|home/jojo)/dokumente/Uni/DA!
