Personal changes to ./categorize.cfg

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -4,12 +4,23 @@ aliases (
 	"sun-awt-X11-XDialogPeer" -> "java",
 	"sun-awt-X11-XWindowPeer" -> "java",
         "gramps.py"               -> "gramps",
-	"___nforschung"           -> "ahnenforschung"
+	"___nforschung"           -> "ahnenforschung",
+	"Pidgin"		  -> "pidgin"
 	)
 
 -- A rule that probably everybody wants. Being inactive for over a minute
 -- causes this sample to be ignored by default.
 $idle > 60 ==> tag inactive,
+
+
+current window $program == "sun-awt-X11-XFramePeer" &&
+current window $title == "I3P"
+  ==> tag Program:I3P,
+
+current window $program == "sun-awt-X11-XDialogPeer" &&
+current window $title == " " &&
+any window $title == "I3P"
+  ==> tag Program:I3P,
 
 -- Simple rule that just tags the current program
 tag Program:$current.program,
@@ -43,9 +54,28 @@ current window $title =~ m!Diplomarbeit.pdf!
 current window $title =~ m!LoopSubgroupPaper.pdf!
   ==> tag Project:DA,
 
+( format $date >= "2010-08-01" &&
+  format $date <= "2010-12-01" &&
+  ( current window $program == "sun-awt-X11-XFramePeer" &&
+      current window $title == "I3P" ||
+    current window $program == "sun-awt-X11-XDialogPeer" &&
+      current window $title == " " &&
+      any window $title == "I3P" ||
+    current window $title =~ m!(?:~|home/jojo)/dokumente/Uni/SA! ||
+    current window $title =~ m!Isabelle200! ||
+    current window $title =~ m!isar-ref.pdf! ||
+    current window $title =~ m!document.pdf! ||
+    current window $title =~ m!outline.pdf! ||
+    current window $title =~ m!Studienarbeit.pdf! )
+) ==> tag Project:SA,
+
+
 -- Out of curiosity: what percentage of my time am I actually coding Haskell?
 current window ($program == "gvim" && $title =~ /^[^ ]+\.hs \(/ )
   ==> tag Editing-Haskell,
+
+{-
+-- Example of time-related rules. I do not use these myself.
 
 -- To be able to match on the time of day, I introduce tags for that as well.
 -- $time evaluates to local time.
@@ -78,3 +108,4 @@ format $date >= "2010-03-19"  ==> tag period:after_a_special_day,
 month $date == 1 ==> tag month:January,
 month $date == 2 ==> tag month:February,
 year $date == 2010 ==> tag year:2010,
+-}
