--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -40,6 +40,8 @@ executable arbtt-capture
         Capture
         TimeLog
         UpgradeLog1
+    
+    ghc-options: -rtsopts
 
     if os(windows) 
         extra-libraries: psapi
@@ -75,6 +77,7 @@ executable arbtt-stats
         Stats
         Text.ParserCombinators.Parsec.ExprFail
         Text.Regex.PCRE.Light.Text
+    ghc-options: -rtsopts
     if os(windows) 
         cpp-options:    -DWIN32
     else
@@ -92,6 +95,7 @@ executable arbtt-dump
         Data.Binary.StringRef
         CommonStartup
         TimeLog
+    ghc-options: -rtsopts
     if os(windows) 
         cpp-options:    -DWIN32
     else
@@ -109,6 +113,7 @@ executable arbtt-import
         Data.Binary.StringRef
         CommonStartup
         TimeLog
+    ghc-options: -rtsopts
     if os(windows) 
         cpp-options:    -DWIN32
     else
@@ -126,6 +131,7 @@ executable arbtt-recover
         Data.Binary.StringRef
         CommonStartup
         TimeLog
+    ghc-options: -rtsopts
     if os(windows) 
         cpp-options:    -DWIN32
     else
