Extend ./categorize.cfg a bit

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -54,6 +54,9 @@ current window $title =~ m!Diplomarbeit.pdf!
 current window $title =~ m!LoopSubgroupPaper.pdf!
   ==> tag Project:DA,
 
+current window $title =~ m!TDM!
+  ==> tag Project:TDM,
+
 ( format $date >= "2010-08-01" &&
   format $date <= "2010-12-01" &&
   ( current window $program == "sun-awt-X11-XFramePeer" &&
