Support comparing against a list of strings

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -12,6 +12,8 @@ aliases (
 -- causes this sample to be ignored by default.
 $idle > 60 ==> tag inactive,
 
+-- A rule that matches on a list of strings
+current window $program == ["Navigator","galeon"] ==> tag Web,
 
 current window $program == "sun-awt-X11-XFramePeer" &&
 current window $title == "I3P"
