Support for list of regular expressions

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -49,11 +49,9 @@ any window ($title =~ /nforschung/)
 
 
 -- My diploma thesis is in a different directory
-current window $title =~ m!(?:~|home/jojo)/dokumente/Uni/DA!
-  ==> tag Project:DA,
-current window $title =~ m!Diplomarbeit.pdf!
-  ==> tag Project:DA,
-current window $title =~ m!LoopSubgroupPaper.pdf!
+current window $title =~ [ m!(?:~|home/jojo)/dokumente/Uni/DA!
+                         , m!Diplomarbeit.pdf!
+                         , m!LoopSubgroupPaper.pdf! ]
   ==> tag Project:DA,
 
 current window $title =~ m!TDM!
