--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -31,7 +31,7 @@ executable arbtt-capture
     hs-source-dirs:     src
     build-depends:
         base == 4.5.*, filepath, directory, mtl, time >= 1.4, utf8-string, 
-        bytestring, binary, deepseq
+        bytestring, binary, deepseq, strict
     other-modules:
         Data
         Data.MyText
