Warn about format speed

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -101,6 +101,8 @@ $sampleage <= 24:00 ==> tag last-day,
 -- (YYYY-MM-DD), it may be compared with strings. For example, to match
 -- everything on and after a particular date I can use
 format $date >= "2010-03-19"  ==> tag period:after_a_special_day,
+-- but note that this is a rather expensive operation and will slow down your
+-- data processing considerably.
 
 -- “day of month $date” gives the day of month (1..31),
 -- “day of week $date” gives a sequence number of the day of week
