Support for date literals

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -57,8 +57,8 @@ current window $title =~ [ m!(?:~|home/jojo)/dokumente/Uni/DA!
 current window $title =~ m!TDM!
   ==> tag Project:TDM,
 
-( format $date >= "2010-08-01" &&
-  format $date <= "2010-12-01" &&
+( $date >= 2010-08-01 &&
+  $date <= 2010-12-01 &&
   ( current window $program == "sun-awt-X11-XFramePeer" &&
       current window $title == "I3P" ||
     current window $program == "sun-awt-X11-XDialogPeer" &&
@@ -97,10 +97,14 @@ $sampleage <= 24:00 ==> tag last-day,
 -- evaluate dates in local time. Set TZ environment variable if you need
 -- statistics in a different time zone.
 
+-- You can compare dates:
+$date >= 2001-01-01 ==> tag this_century,
+-- You have to write them in YYYY-MM-DD format, else they will not be recognized. 
+
 -- “format $date” produces a string with the date in ISO 8601 format
 -- (YYYY-MM-DD), it may be compared with strings. For example, to match
 -- everything on and after a particular date I can use
-format $date >= "2010-03-19"  ==> tag period:after_a_special_day,
+format $date =~ ".*-03-19"  ==> tag period:on_a_special_day,
 -- but note that this is a rather expensive operation and will slow down your
 -- data processing considerably.
 
