--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -30,7 +30,8 @@ executable arbtt-capture
     main-is:            capture-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.*, filepath, directory, transformers, time >= 1.4, utf8-string, 
+        base == 4.5.* || == 4.6.*,
+        filepath, directory, transformers, time >= 1.4, utf8-string,
         bytestring, binary, deepseq, strict,
         terminal-progress-bar, bytestring-progress
     other-modules:
