Document comment syntax in the example .cfg file
This is the first of a set of changes
aimed to make the initial learning curve of arbtt smoother,
especially for users not familiar with Haskell.

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -1,3 +1,7 @@
+-- Comments in this file use the Haskell syntax:
+-- A "--" comments the rest of the line.
+-- A set of {- ... -} comments out a group of lines.
+
 -- This defines some aliases, to make the reports look nicer:
 aliases (
 	"sun-awt-X11-XFramePeer"  -> "java",
