Introduce --format flag for arbtt-dump

--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -101,6 +101,7 @@ executable arbtt-dump
         Data.Binary.StringRef
         CommonStartup
         TimeLog
+        DumpFormat
     ghc-options: -rtsopts
     if os(windows) 
         cpp-options:    -DWIN32
