--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -18,8 +18,7 @@ description:
     WARNING: The log file might contain very sensitive private data. Make sure
     you understand the consequences of a full-time logger and be careful with this
     data.
-homepage:           http://www.joachim-breitner.de/projects#arbtt
-
+homepage:           http://arbtt.nomeata.de/
 
 extra-source-files:
     categorize.cfg, arbtt-capture.desktop, README,
