--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -69,7 +69,7 @@ executable arbtt-stats
     main-is:            stats-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.*, parsec == 3.*, containers, pcre-light, old-locale
+        base == 4.*, parsec == 3.*, containers == 0.5.*, pcre-light, old-locale
     other-modules:
         Data
         Data.MyText
@@ -93,7 +93,7 @@ executable arbtt-dump
     main-is:            dump-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.*, parsec == 3.*, containers,
+        base == 4.*, parsec == 3.*, containers == 0.5.*,
         aeson == 0.6.*, array == 0.4.*
     other-modules:
         Data
@@ -114,7 +114,7 @@ executable arbtt-import
     main-is:            import-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.*, parsec == 3.*, containers
+        base == 4.*, parsec == 3.*, containers == 0.5.*
     other-modules:
         Data
         Data.MyText
@@ -132,7 +132,7 @@ executable arbtt-recover
     main-is:            recover-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.*, parsec == 3.*, containers
+        base == 4.*, parsec == 3.*, containers == 0.5.*
     other-modules:
         Data
         Data.MyText
