--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -29,7 +29,7 @@ executable arbtt-capture
     main-is:            capture-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.*,
+        base == 4.*, -- base == 4.5.* || == 4.6.*,
         filepath, directory, transformers, time >= 1.4, utf8-string,
         bytestring, binary, deepseq, strict,
         terminal-progress-bar,
