--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
  - sudo add-apt-repository -y ppa:hvr/ghc
  - sudo apt-get update
  - sudo apt-get install cabal-install-1.18 ghc-$GHCVER happy
+ - sudo apt-get install libxss-dev
  - export PATH=/opt/ghc/$GHCVER/bin:$PATH
 
 install:
