--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@
 
 # The following enables several GHC versions to be tested; often it's enough to test only against the last release in a major GHC version. Feel free to omit lines listings versions you don't need/want testing for.
 env:
- - GHCVER=6.12.3
- - GHCVER=7.0.1
- - GHCVER=7.0.2
- - GHCVER=7.0.3
- - GHCVER=7.0.4
- - GHCVER=7.2.1
- - GHCVER=7.2.2
+# - GHCVER=6.12.3
+# - GHCVER=7.0.1
+# - GHCVER=7.0.2
+# - GHCVER=7.0.3
+# - GHCVER=7.0.4
+# - GHCVER=7.2.1
+# - GHCVER=7.2.2
  - GHCVER=7.4.1
  - GHCVER=7.4.2
  - GHCVER=7.6.1
