--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -29,7 +29,7 @@ executable arbtt-capture
     main-is:            capture-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.*,
+        base == 4.5.* || == 4.6.*,
         filepath, directory, transformers, time >= 1.4, utf8-string,
         bytestring, binary, deepseq, strict,
         terminal-progress-bar,
@@ -69,7 +69,8 @@ executable arbtt-stats
     main-is:            stats-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.*, parsec == 3.*, containers == 0.5.*, pcre-light, old-locale
+        base == 4.5.* || == 4.6.*,
+        parsec == 3.*, containers == 0.5.*, pcre-light, old-locale
     other-modules:
         Data
         Data.MyText
@@ -93,7 +94,8 @@ executable arbtt-dump
     main-is:            dump-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.*, parsec == 3.*, containers == 0.5.*,
+        base == 4.5.* || == 4.6.*,
+        parsec == 3.*, containers == 0.5.*,
         aeson == 0.6.*, array == 0.4.*
     other-modules:
         Data
@@ -114,7 +116,8 @@ executable arbtt-import
     main-is:            import-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.*, parsec == 3.*, containers == 0.5.*
+        base == 4.5.* || == 4.6.*,
+        parsec == 3.*, containers == 0.5.*
     other-modules:
         Data
         Data.MyText
@@ -132,7 +135,8 @@ executable arbtt-recover
     main-is:            recover-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.*, parsec == 3.*, containers == 0.5.*
+        base == 4.5.* || == 4.6.*,
+        parsec == 3.*, containers == 0.5.*
     other-modules:
         Data
         Data.MyText
