Make $desktop available
this resolves issue #1.

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -31,6 +31,9 @@ any window $title == "I3P"
 -- Simple rule that just tags the current program
 tag Program:$current.program,
 
+-- Another simple rule, just tags the current desktop (a.k.a. workspace)
+tag Desktop:$desktop,
+
 -- I'd like to know what evolution folders I'm working in. But when sending a
 -- mail, the window title only contains the (not very helpful) subject. So I do
 -- not tag necessarily by the active window title, but the title that contains
